[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/fTSCN/fHouse/sHorWall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/fTSCN/fHouse/sVecWall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Art/House/sHouse_Floor.png" type="Texture" id=3]
[ext_resource path="res://Game/Script/fHouse/gHouse.gd" type="Script" id=4]
[ext_resource path="res://Game/Art/House/sHouse_door.png" type="Texture" id=5]
[ext_resource path="res://Game/Theme/uiTheme.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 262, 138 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.7382, 166.804 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72.1304, 85.5468 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("cHouseMaskNode2d/cHouseMask:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="House" type="Node2D"]
position = Vector2( -286.002, -267.103 )
script = ExtResource( 4 )

[node name="nHouseMain" type="Node2D" parent="."]

[node name="sFloor" type="Sprite" parent="nHouseMain"]
position = Vector2( 295.431, 389.536 )
rotation = 0.000981362
scale = Vector2( 2.13889, 1.65828 )
texture = ExtResource( 3 )

[node name="sHorWall2" parent="nHouseMain" instance=ExtResource( 1 )]
position = Vector2( 124.103, 507.103 )
scale = Vector2( 1.00418, 0.758715 )

[node name="sHorWall3" parent="nHouseMain" instance=ExtResource( 1 )]
position = Vector2( 459.548, 507.103 )
scale = Vector2( 1.007, 0.758715 )

[node name="sHorWall4" parent="nHouseMain" instance=ExtResource( 1 )]
position = Vector2( 290.291, 91.103 )
scale = Vector2( 2.33369, 0.758715 )

[node name="sVecWall" parent="nHouseMain" instance=ExtResource( 2 )]
position = Vector2( 14.0158, 212.454 )
scale = Vector2( 0.108327, 1.71719 )

[node name="sVecWall3" parent="nHouseMain" instance=ExtResource( 2 )]
position = Vector2( 574.002, 211.103 )
scale = Vector2( 0.108327, 1.71719 )

[node name="aHouseArea2d" type="Area2D" parent="."]
visible = false

[node name="shape" type="CollisionShape2D" parent="aHouseArea2d"]
position = Vector2( 288, 272 )
shape = SubResource( 1 )

[node name="nDoor" type="Node2D" parent="."]
position = Vector2( 257, 485 )

[node name="sDoorSprite" type="Sprite" parent="nDoor"]
position = Vector2( 32.4974, 77.275 )
scale = Vector2( 0.490141, 0.344952 )
texture = ExtResource( 5 )

[node name="aDoorArea2d" type="Area2D" parent="nDoor"]
visible = false
position = Vector2( -1.5874, 0.793701 )

[node name="shape" type="CollisionShape2D" parent="nDoor/aDoorArea2d"]
position = Vector2( 35.5199, 28.2282 )
shape = SubResource( 2 )

[node name="sDoorstatic" type="StaticBody2D" parent="nDoor"]
visible = false
collision_mask = 5

[node name="shape" type="CollisionShape2D" parent="nDoor/sDoorstatic"]
position = Vector2( 35.3732, 23.3597 )
shape = SubResource( 3 )

[node name="UI" type="Node2D" parent="."]
position = Vector2( -211.149, -59.6985 )
z_index = 5

[node name="ui" type="Control" parent="UI"]
margin_left = 307.359
margin_top = 502.54
margin_right = 358.359
margin_bottom = 536.54
rect_scale = Vector2( 1, 1.16 )
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="bDoorButton" type="Button" parent="UI/ui" groups=[
"gUI",
]]
anchor_left = -0.189
anchor_right = 1.286
anchor_bottom = 0.5
margin_left = 37.4145
margin_top = 102.593
margin_right = 55.1895
margin_bottom = 110.593
mouse_default_cursor_shape = 2
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HouseMask = SubResource( 4 )

[node name="cHouseMaskNode2d" type="Node2D" parent="."]
position = Vector2( 24, 13.6756 )
z_index = 1

[node name="cHouseMask" type="ColorRect" parent="cHouseMaskNode2d"]
visible = false
margin_right = 545.0
margin_bottom = 403.0
mouse_filter = 2
color = Color( 0.12549, 0.12549, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_shape_entered" from="aHouseArea2d" to="." method="_on_aHouseArea2d_body_shape_entered"]
[connection signal="body_shape_exited" from="aHouseArea2d" to="." method="_on_aHouseArea2d_body_shape_exited"]
[connection signal="body_shape_entered" from="nDoor/aDoorArea2d" to="." method="_on_aDoorArea2d_body_shape_entered"]
[connection signal="body_shape_exited" from="nDoor/aDoorArea2d" to="." method="_on_aDoorArea2d_body_shape_exited"]
[connection signal="mouse_entered" from="UI/ui/bDoorButton" to="." method="_on_bDoorButton_mouse_entered"]
[connection signal="mouse_exited" from="UI/ui/bDoorButton" to="." method="_on_bDoorButton_mouse_exited"]
[connection signal="pressed" from="UI/ui/bDoorButton" to="." method="_on_bDoorButton_pressed"]
